crates/reinhardt-pages/tests/ui/server_fnset/fail/unknown_key.stderr
error: unknown server_fnset option; expected `name`, `actions`, or `for`
 --> tests/ui/server_fnset/fail/unknown_key.rs:3:32
  |
3 | #[server_fnset(name = "items", unknown = true)]
  |                                ^^^^^^^

warning: unused imports: `ServerFnSetRegistration` and `ServerFnSet`
 --> tests/ui/server_fnset/fail/unknown_key.rs:1:34
  |
1 | use reinhardt_pages::server_fn::{ServerFnSet, ServerFnSetRegistration, server_fnset};
  |                                  ^^^^^^^^^^^  ^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
